--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,16 @@
      <!---header--->
     <nav id="header">
         <div class="logo">
-            <a href="index.html"><img src="/assets/img/logo.jpg" alt="Logo" title="Logotype"></a>
+            <a href="index.html"><img src="/assets/img/logo.png" alt="Logo" title="Logotype"></a>
         </div>
+        <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+    <label for="burger-checkbox" class="burger"></label>
         <div class="navLinks">
-            <a class="homePage" href="index.html">Home</a>
-            <a href="aboutPage.html">About</a>
-            <a href="booksPage.html">Books</a>
-            <a href="newsPage.html">News</a>
-            <a href="otherPage.html">Other</a>
+            <a class="page" href="index.html">Home</a>
+            <a class="page"  href="aboutPage.html">About</a>
+            <a class="page" href="booksPage.html">Books</a>
+            <a class="page" href="newsPage.html">News</a>
+            <a class="page" href="otherPage.html">Other</a>
         </div>
         <div class="btnHeader">
             <button class="btnShop"><img src="/assets/img/shop.svg" alt=""></button>
@@ -46,7 +48,7 @@
         </div> 
     </main>
 
-         <!---content--->
+    <!---content--->
     <section id="sliderNew">
         <h2>BESTSELLERS</h2>
         <div class="sliderContainer">
@@ -56,39 +58,34 @@
         </div>
     </section>
 
-    <section class="main swiper mySwiper">
+    <section class="swiper mySwiper">
         <div class="wrapper swiper-wrapper">
           <div class="slide swiper-slide">
-            <img src="images/img1.jpg" alt="" class="image" />
+            <img src="/assets/img/books.jpg" alt="Cover book" class="image" />
             <div class="image-data">
-              <span class="text">Enjoy the finest coffee drinks.</span>
               <h2>
-                Enjoy Our Exclusive <br />
-                Coffee and Cocktails
+                Take part in the competition!
               </h2>
-              <a href="#" class="button">About Us</a>
+              <span class="textSwiper">The main sponsor is Penguin Books.</span>
             </div>
           </div>
           <div class="slide swiper-slide">
-            <img src="images/img2.jpg" alt="" class="image" />
+            <img src="/assets/img/books2.jpg" alt="Cover book" class="image" />
             <div class="image-data">
-              <span class="text">We really like what we do.</span>
               <h2>
-                Coffee Beans with a <br />
-                Perfect Aroma
+                Our store is holding a contest for this year's book!
               </h2>
-              <a href="#" class="button">About Us</a>
+              <span class="textSwiper">Participate!</span>
             </div>
           </div>
           <div class="slide swiper-slide">
-            <img src="images/img3.jpg" alt="" class="image" />
+            <img src="/assets/img/books3.jpg" alt="Cover book" class="image" />
             <div class="image-data">
-              <span class="text">Making Our coffee with lover.</span>
               <h2>
-                Alluring and Fragrant <br />
-                Coffee Aroma
+                Read the rules of participation in the competition. <br>
+                We are waiting for everyone!
               </h2>
-              <a href="#" class="button">About Us</a>
+              <a href="#" class="button">More</a>
             </div>
           </div>
         </div>
@@ -97,9 +94,54 @@
         <div class="swiper-pagination"></div>
       </section>
 
-      
+      <section id="partnersBlock">
+        <div class="partnersArticle">
+            <p class="partnersTitle">
+              Sponsors<span class="partnersSpan">&amp;Partners</span></p>
+                <p class="partnersText">
+                    Cooperation with the largest companies that almost everyone knows about!
+                </p></div>
+        <div class="partnersIcon">
+            <img src="/assets/img/amazon.jpg" alt="Amazon" title="Partners">
+            <img src="/assets/img/walmart.jpg" alt="Walmart" title="Partners">
+            <img src="/assets/img/harpercollins.jpg" alt="Harper Collins" title="Partners">
+            <img src="/assets/img/litres.jpg" alt="LitRes" title="Partners">
+            <img src="/assets/img/penguin.jpg" alt="Penguin Classics" title="Partners">
+        </div>
+    </section>
+    
+    <!---footer--->
+    <section id="footerBlock">
+                  <div id="footer_logo"><img class="logo_img" src="/assets/img/logo.png" alt="Logotype" title="ARCHIVE">
+                      <p>&copy; 2013-2024 Pages&amp;Co. All rights reserved.</p>
+                  </div>
+                      <div class="footer_block_menu">
+                          <h2>MENU</h2>
+                          <ul class="footer_menu_list">
+                              <li><a href="aboutPage.html">About</a></li>
+                              <li><a href="booksPage.html">Books</a></li>
+                              <li><a href="newsPage.html">News</a></li>
+                              <li><a href="otherPage.html">Other</a></li>
+                          </ul>
+                      </div>
+                      <div class="footer_block_menu">
+                          <h2>FOLLOW</h2>
+                          <ul class="footer_menu_list">
+                              <li><a href="#" title="Instagram"><svg fill="#000000" height="64px" width="64px" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g id="social-instagram"> <path d="M23.9,7.1c-0.1-1.3-0.3-2.1-0.6-2.9C23.1,3.4,22.7,2.7,22,2s-1.3-1.1-2.1-1.4c-0.8-0.3-1.6-0.5-2.9-0.6C15.7,0,15.3,0,12,0 S8.3,0,7.1,0.1C5.8,0.1,4.9,0.3,4.1,0.6C3.4,0.9,2.7,1.3,2,2S0.9,3.4,0.6,4.1C0.3,4.9,0.1,5.8,0.1,7.1C0,8.3,0,8.7,0,12 s0,3.7,0.1,4.9c0.1,1.3,0.3,2.1,0.6,2.9C0.9,20.6,1.3,21.3,2,22s1.3,1.1,2.1,1.4c0.8,0.3,1.6,0.5,2.9,0.6C8.3,24,8.7,24,12,24 s3.7,0,4.9-0.1c1.3-0.1,2.1-0.3,2.9-0.6c0.8-0.3,1.5-0.7,2.1-1.4s1.1-1.3,1.4-2.1c0.3-0.8,0.5-1.6,0.6-2.9C24,15.7,24,15.3,24,12 S24,8.3,23.9,7.1z M21.8,16.8c-0.1,1.2-0.2,1.8-0.4,2.2c-0.2,0.6-0.5,1-0.9,1.4s-0.8,0.7-1.4,0.9c-0.4,0.2-1.1,0.4-2.2,0.4 c-1.3,0.1-1.6,0.1-4.8,0.1s-3.6,0-4.8-0.1c-1.2-0.1-1.8-0.2-2.2-0.4c-0.6-0.2-1-0.5-1.4-0.9s-0.7-0.8-0.9-1.4 c-0.2-0.4-0.4-1.1-0.4-2.2c-0.1-1.3-0.1-1.6-0.1-4.8s0-3.6,0.1-4.8C2.3,6,2.5,5.3,2.6,4.9c0.2-0.6,0.5-1,0.9-1.4s0.8-0.7,1.4-0.9 C5.3,2.5,6,2.3,7.2,2.2C8.4,2.2,8.8,2.2,12,2.2s3.6,0,4.8,0.1c1.2,0.1,1.8,0.2,2.2,0.4c0.6,0.2,1,0.5,1.4,0.9s0.7,0.8,0.9,1.4 c0.2,0.4,0.4,1.1,0.4,2.2c0.1,1.3,0.1,1.6,0.1,4.8S21.8,15.6,21.8,16.8z"></path> <path d="M12,6c-3.3,0-6,2.7-6,6s2.7,6,6,6s6-2.7,6-6S15.3,6,12,6z M12,15.9c-2.2,0-3.9-1.7-3.9-3.9S9.8,8.1,12,8.1s3.9,1.7,3.9,3.9 S14.2,15.9,12,15.9z"></path> <circle cx="18.5" cy="6" r="1.5"></circle> </g> </g></svg> Instagram</a></li>
+                              <li><a href="#" title="Twitter"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                                <path d="M 6.9199219 6 L 21.136719 26.726562 L 6.2285156 44 L 9.40625 44 L 22.544922 28.777344 L 32.986328 44 L 43 44 L 28.123047 22.3125 L 42.203125 6 L 39.027344 6 L 26.716797 20.261719 L 16.933594 6 L 6.9199219 6 z"></path>
+                                </svg> Twitter</a></li>
+                              <li><a href="#" title="Telegram"><svg width="64px" height="64px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" stroke-width="3" stroke="#000000" fill="none"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M26.67,38.57l-.82,11.54A2.88,2.88,0,0,0,28.14,49l5.5-5.26,11.42,8.35c2.08,1.17,3.55.56,4.12-1.92l7.49-35.12h0c.66-3.09-1.08-4.33-3.16-3.55l-44,16.85C6.47,29.55,6.54,31.23,9,32l11.26,3.5L45.59,20.71c1.23-.83,2.36-.37,1.44.44Z" stroke-linecap="round"></path></g></svg> Telegram</a></li>
+                              <li><a href="#" title="Facebook"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                                <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z"></path>
+                            </svg> Facebook</a></li>
+                          </ul>
+                      </div>
+    </section>
+
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="swiper.js" defer></script>
+<script src="swiper.js"></script>
 <script src="index.js"></script>
 </body>
+
 </html>
