--- a/public/newsPage.html
+++ b/public/newsPage.html
@@ -36,52 +36,12 @@
     </nav>
 
     <!---content--->
-    <section id="cover-about">
-        <div class="about-container">
-            <h1>ABOUT US</h1>
-            <h3>Our location, the idea of creating a store, 
-                <br>cooperation with well-known companies.</h3>
-        </div>
-        <div class="history-block">
-            <h1>Our History</h1>
-            <p>In the charming town of Cardiff, nestled between rolling hills and vibrant green spaces, a unique bookstore was born in 2013. Pages&amp;Co. was the brainchild of Elena Ohan, a passionate book lover with a dream to create a haven for readers of all ages.
-            <br>
-            Elena grew up surrounded by books, spending countless hours in her local library. In spired by her love for literature, she envisioned a place where people could not only purchase books but also connect with one another through the stories they cherished. With this vision in mind, she embarked ona journey to establish Pages&amp;Co. 
-            <br>
-            From the very beginning, Pages&amp;Co. aimed to collaborate with major publishing houses,forging partnerships that allowed them to introduce exclusive titles and host joint competitions. These contests encouraged budding writers and artists to showcase their talents, fostering a sense of community and creativity inClifford.
-            <br>
-            As word spread about this enchanting bookstore, Elena’s commitment to diversity and inclusivity became a hall mark of Pages&amp;Co. The store offered books in multiple languages,ensuring that everyone in the diverse community of Cardiff could find stories that resonated with them. 
-            <br>
-            Elena's passion for literature transformed Pages&amp;Co. into more than just a bookstore; it became a cultural hub. Regular events such as author signings,book readings, and literary discussions drew in crowds from near and far. The cozy atmosphere, characterized by soft lighting and the comforting scent of paper and ink, invited visitors to linger, discover new titles,and engage with fellow book enthusiasts.
-            <br>
-            Under Elena’s leadership, Pages&amp;Co. quickly gained recognition,with its books selling not only in Cardiff but also around the world. The store became a global ambassador of literature, celebrating the written word in all its forms.
-            <br>
-            As the years passed, Pages&amp;Co. flourished, embodying Elena's vision of a community united by the love of reading. Today, it stands as a testament to her belief that stories have the power to connect people,transcend borders, and open hearts and minds.
-            <br>
-            In the heart of Cardiff, Pages&amp;Co. continues to inspire,enchant, and bring together readers from all walks of life,reminding everyone that within the pages of a book lies a world waiting to be explored.</p>
-        </div>
-        <div class="location-container">
-                <div class="contacts-article">
-                        <p class="contacts-name">Our Contacts</p>
-                </div>
-                
-                <div class="block-address">
-                <div class="address-container">
-                    <h2>079 0468 7437</h2>
-                    <h3>pages_and_co@gmail.com</h3>
-                    <ul class="address-list">
-                        <li><span class="top-add">The main store:</span> 47 St Cadoc Rd</li>
-                        <li><span class="top-add">City:</span> Cardiff</li>
-                        <li><span class="top-add">Phone number:</span> 079 0468 7437</li>
-                        <li><span class="top-add">Zip code:</span>  CF14 4ND</li>
-                        <li><span class="top-add">Country:</span> United Kingdom</li>
-                    </ul>
-                </div>
-    
-                    <div class="map-div"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.801112019218!2d-3.192044675789766!3d51.51686473661336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486e1c7dcafadea7%3A0x16c7fcd8467554c0!2zNDcgU3QgQ2Fkb2MgUmQsIENhcmRpZmYgQ0YxNCA0TkQsINCS0LXQu9C40LrQvtCx0YDQuNGC0LDQvdC40Y8!5e0!3m2!1sru!2snl!4v1730032503284!5m2!1sru!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </div>
-                </div>
-            </div>
+
+    <section id="news-container">
+        <div class=""></div>
     </section>
+
+
 
     <!---footer--->
     <section id="footer-block">
@@ -110,11 +70,11 @@
                 </svg> Facebook</a></li>
                 </ul>
             </div>
-    </section>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="swiper.js"></script>
 <script src="index.js"></script>
-
 </body>
+
 </html>
