--- a/public/booksPage.html
+++ b/public/booksPage.html
@@ -133,7 +133,9 @@
     </div>
 </section>
 
+<script src="/public/catalog.js"></script>
 <script src="/dist/main.js"></script>
+
 </body>
 
 </html>
