--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
             Read the rules of participation in the competition. <br>
             We are waiting for everyone!
         </h2>
-        <a href="#" class="button">More</a>
+        <a href="newsPage.html" class="button">More</a>
         </div>
     </div>
     </div>
@@ -190,7 +190,9 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="/src/swiper.js"></script>
+<script src="/public/carousel.js"></script>
+<script src="/public/swiper.js"></script>
+<script src="/public/registration.js"></script>
 <script src="/dist/main.js"></script>
 </body>
 
