--- a/public/newsPage.html
+++ b/public/newsPage.html
@@ -194,8 +194,9 @@
             </div>
 </section>
 
+<script src="/public/registration.js"></script>
+<script src="/public/apiNews.js"></script>
 <script src="/dist/main.js"></script>
-<script src="/src/apiNews.js"></script>
 
 </body>
 
