--- a/public/aboutPage.html
+++ b/public/aboutPage.html
@@ -159,6 +159,7 @@
             </div>
     </section>
 
+    <script src="/public/registration.js"></script>
     <script src="/dist/main.js"></script>
 </body>
 </html>
