--- a/public/booksPage.html
+++ b/public/booksPage.html
@@ -133,8 +133,8 @@
     </div>
 </section>
 
-<script src="/public/catalog.js"></script>
-<script src="/dist/main.js"></script>
+<script src="/src/catalog.js"></script>
+<script src="/src/registration.js"></script>
 
 </body>
 
