--- a/public/index.html
+++ b/public/index.html
@@ -90,9 +90,9 @@
             <h2>Find your book!</h2>
             <section class="find_margin">
                 <div class="search">
-                <form method="get" action="/search">
-                <input type="text" id="filter" placeholder="Search">
-                <input type="submit" value="Search">
+                <form method="get" action="/public/booksPage.html">
+                    <input type="text" id="filter" placeholder="Search">
+                    <input type="submit" value="Search">
                 </form>
                 </div>
             </section>
@@ -190,10 +190,11 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="/public/carousel.js"></script>
-<script src="/public/swiper.js"></script>
-<script src="/public/registration.js"></script>
 <script src="/dist/main.js"></script>
+<script src="/src/carousel.js"></script>
+<script src="/src/swiper.js"></script>
+<script src="/src/registration.js"></script>
+
 </body>
 
 </html>
