--- a/public/aboutPage.html
+++ b/public/aboutPage.html
@@ -159,7 +159,9 @@
             </div>
     </section>
 
-    <script src="/public/registration.js"></script>
+
     <script src="/dist/main.js"></script>
+    <script src="/src/registration.js"></script>
+    
 </body>
 </html>
