--- a/public/otherPage.html
+++ b/public/otherPage.html
@@ -120,10 +120,9 @@
             </div>
     </section>
 
-    <script src="/public/registration.js"></script>
-    <script src="/public/quotes.js"></script>
     <script src="/dist/main.js"></script>
-
+    <script src="/src/quotes.js"></script>
+    <script src="/src/registration.js"></script>
 
 </body>
 </html>
